# mediatools

./: .gitignore  README.md  README.zh-CN.md
emby-inspector/: Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
emby-inspector/app/: emby_client.py  main.py  models.py  password_routes.py  pipeline_auth.py  pipeline_parser.py  pipeline_routes.py  pipeline_workers.py  quark_client.py  routes.py  settings.py
emby-inspector/app/templates/: _layout.html  _layout_min.html  home.html  login.html  password.html  recent.html  settings.html  tasks.html  tasks_detail.html
emby-tools/: .env  .env.example  docker-compose.yml
emby-tools/app/: db.py  genre_map.py  jobs.py  password_routes.py  pipeline_ingest_routes.py  pipeline_models.py  pipeline_runner.py  pipeline_scrape.py  pipeline_storage.py  routes.py  routes_extra.py  settings.py  storage.py  tmdb_client.py
emby-tools/app/templates/: _layout.html  _poster.html  about.html  growth.html  login.html  password.html  settings.html
emby-tools/backups/: 20260319001.sql
telegram-communication-bot/: .gitignore  Makefile  README.en.md  README.md  go.mod  go.sum
telegram-communication-bot/internal/config/: config.go
telegram-communication-bot/internal/handlers/: handlers.go
telegram-communication-bot/internal/services/: captcha.go  message.go  ratelimiter.go
telegram-talk-bot/: .env.example  Dockerfile  README.en.md  README.md  architecture.drawio  docker-compose.yml
telegram-talk-bot/cmd/bot/: main.go
telegram-talk-bot/internal/bot/: bot.go
telegram-talk-bot/internal/handlers/: admin.go
(+4 files in other folders)
