[project]
name = "emby-inspector"
version = "0.1.0"
description = "MVP Emby dashboard"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "httpx>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "apscheduler>=3.10",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[tool.ruff]
line-length = 100
